--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,14 +8,21 @@ jobs:
           name: webpack artifacts
           path: public/
 
+  build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - name: npm install and build webpack
         run: |
           npm install
           npm run build
+      - uses: actions/upload-artifact@main
+        with:
+          name: webpack artifacts
+          path: public/
+
+          
+    
 
   test:
     - uses: actions/download-artifact@main
